# temporal-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: backend.yml  dependabot-auto-merge.yml  frontend.yml  version-consistency.yml
backend/: CHANGELOG.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/api/: logging.py  main.py  models.py  ws.py
backend/api/routes/: analyze.py  derivatives.py  history.py
backend/scripts/: demo.py
backend/src/: config.py
backend/src/agent/: __init__.py  loop.py  registry.py  tools.py
backend/src/data/: __init__.py  connectors.py  gpr.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/eval/: backtest.py
backend/src/featurizer/: __init__.py  featurizer.py
backend/src/inference/: __init__.py  classifier.py
backend/tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_alembic_config.py  test_analyze_route.py  test_backtest.py  test_config.py  test_data_connectors.py  test_db_models.py  test_deferred_tools.py  test_demo.py  test_featurizer.py  test_gpr_connector.py  test_health.py  test_inference.py  test_logging.py  test_models.py  test_routes.py  test_ws.py
docs/: BACKLOG.md
frontend/: .dockerignore  CHANGELOG.md  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  (+2 more)
(+25 files in other folders)
