[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-agent-backend"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    # Data / validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "asyncpg>=0.31.0",
    # Cache / queue
    "redis>=5.2.0",
    "arq>=0.26.0",
    # ML
    "tabpfn>=7.1.1",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.8.0",
    # Data sources
    "yfinance>=1.3.0",
    "fredapi>=0.5.2",
    # Agent
    "anthropic>=0.40.0",
    # Observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.0.0",
    # Auth
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
